# RCT-Wtool-public

./: .gitignore  README.md
Bot/Bot/: CMakeLists.txt
Bot/Bot/include/: App.h  Bot.h  Config.h  Message.h  Requests.h  Response.h  logging.h  types.h
Bot/Bot/include/nlohmann/: json.hpp
Bot/Bot/libs/curl-7.79.1-win64-mingw/: BUILD-HOMEPAGE.url  BUILD-README.txt  CHANGES.txt  COPYING-libssh2.txt  COPYING-openssl.txt  COPYING-zlib.txt  COPYING-zstd.txt  COPYING.txt  README.txt  RELEASE-NOTES.txt  libs - Ярлык.lnk  mk-ca-bundle.pl
Bot/Bot/libs/curl-7.79.1-win64-mingw/include/curl/: curl.h  curlver.h  easy.h  multi.h  options.h  system.h  urlapi.h
Bot/Bot/modules/UIM/: CMakeLists.txt  main.cpp
Bot/Bot/releases/0_0_1-10/0.0.6/: config.json
Bot/Bot/releases/0_1_0-10/0_1_0/: config.json  logs.txt
Bot/Bot/releases/0_1_0-10/0_1_0/EXDIR/: hello.vbs  start.bat
Bot/Bot/releases/0_1_0-10/0_1_0/updates/update/: 0.0.13
Bot/Bot/releases/0_1_0-10/0_1_2/: config.json
Bot/Bot/releases/0_1_0-10/0_1_3/: authorun.bat  config.json  hide.bat  install.vbs
Bot/Bot/srcs/: App.cpp  Bot.cpp  Config.cpp  Message.cpp  Requests.cpp  Response.cpp  logging.cpp  main.cpp
Bot/PythonBot/: main.py
Bot/PythonBot/bot/: __init__.py  config.py  user_api.py
Server/: main.py  requirements.txt
Server/app/: __init__.py  config.py  model_tools.py  models.py  routes.py
Server/app/bot/: __init__.py  tools.py
Server/app/file/: __init__.py
Server/app/message/: __init__.py
Server/app/user/: __init__.py  (+1 more)
User/: main.py
User/user/: __init__.py  bot.py  config.py  errors.py  message.py
(+2 files in other folders)
